--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,8 @@ MAILCHIMP_API_KEY=
 MAILCHIMP_API_SERVER=
 MAILCHIMP_AUDIENCE_ID=
 
-BUTTONDOWN_API_URL=https://api.buttondown.email/v1/
 BUTTONDOWN_API_KEY=
 
-CONVERTKIT_API_URL=https://api.convertkit.com/v3/
 CONVERTKIT_API_KEY=
 // curl https://api.convertkit.com/v3/forms?api_key=<your_public_api_key> to get your form ID 
 CONVERTKIT_FORM_ID=
@@ -21,5 +19,7 @@ CONVERTKIT_FORM_ID=
 KLAVIYO_API_KEY=
 KLAVIYO_LIST_ID=
 
-REVUE_API_URL=https://www.getrevue.co/api/v2/
 REVUE_API_KEY= 
+
+EMAILOCTOPUS_API_KEY=
+EMAILOCTOPUS_LIST_ID=
