--- a/package.json
+++ b/package.json
@@ -1,74 +1,72 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
-  "version": "1.5.3",
+  "name": "starter-blog",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "next dev",
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "npm run sitemap && npm run rss",
-    "sitemap": "cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-sitemap.mjs",
-    "rss": "cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs",
+    "dev": "INIT_CWD=$PWD next dev",
+    "build": "INIT_CWD=$PWD next build",
+    "postbuild": "yarn sitemap && yarn rss && yarn search",
+    "sitemap": "cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/sitemap.mjs",
+    "rss": "cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/rss.mjs",
+    "search": "cross-env NODE_OPTIONS='--experimental-json-modules' node -r esbuild-register ./scripts/search.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
-    "@mailchimp/mailchimp_marketing": "^3.0.58",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.0",
-    "contentlayer": "0.2.5",
+    "contentlayer": "0.2.8",
     "esbuild": "0.14.38",
-    "github-slugger": "^1.3.0",
+    "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
-    "next": "12.1.6",
-    "next-contentlayer": "0.2.5",
-    "next-themes": "^0.0.14",
-    "postcss": "^8.4.5",
-    "preact": "^10.6.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "reading-time": "1.3.0",
+    "next": "12.3.1",
+    "next-contentlayer": "0.2.8",
+    "next-themes": "^0.2.0",
+    "pliny": "0.0.8",
+    "postcss": "^8.4.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "reading-time": "1.5.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
     "rehype-katex": "^6.0.2",
     "rehype-preset-minify": "6.0.0",
-    "rehype-prism-plus": "^1.1.3",
+    "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.0.0",
     "remark": "^14.0.2",
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "sharp": "^0.28.3",
-    "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^4.0.0"
+    "tailwindcss": "^3.1.8",
+    "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.1.6",
-    "@svgr/webpack": "^6.1.2",
-    "@types/react": "^17.0.14",
-    "@types/tailwindcss": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@next/bundle-analyzer": "12.3.1",
+    "@svgr/webpack": "^6.3.1",
+    "@types/react": "^18.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^7.29.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "esbuild-register": "3.3.3",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
-    "husky": "^6.0.0",
-    "inquirer": "^8.1.1",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.4",
-    "typescript": "^4.6.1-rc"
+    "husky": "^8.0.0",
+    "js-yaml": "4.1.0",
+    "lint-staged": "^13.0.0",
+    "prettier": "^2.7.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "typescript": "^4.8.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
