--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.0",
     "contentlayer": "0.2.8",
+    "dayjs": "^1.11.6",
     "esbuild": "0.14.38",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
